--- a/commerce/templates/commerce/index.html
+++ b/commerce/templates/commerce/index.html
@@ -8,12 +8,18 @@
       {% for product in product_list %}
 	<div class="product">
 	  <div class="image-box">
-	    <!-- <img alt="{{ product.name }}" src="{{ product.image }}"> -->
+	    <img alt="{{ product.name }}" src="{% if product.image %}{{ product.image.url }}{% endif %}">
 	  </div>
 	  <p><a href="{{ product.get_absolute_url }}">{{ product.name|upper }}</a></p>
 	  <p>${{ product.price }}</p>
-	  <p>{{ product.rating }}</p>
-	  <p>{{ product.description|default:"No Description"|truncatechars:30 }}</p>
+	  <p>
+	    {% if product.rating is not None %}
+	      %{{ product.rating }}
+	    {% else %}
+	      <i>No Rating</i>
+	    {% endif %}
+	  </p>
+	  <p>{{ product.description|default:"<i>No Description</i>"|truncatechars:30 }}</p>
 	  <a class="button" href="{% url 'commerce:add' product.id %}">Add</a>
 	</div>
       {% endfor %}
