--- a/commerce/templates/commerce/product.html
+++ b/commerce/templates/commerce/product.html
@@ -7,15 +7,15 @@
   <article>
     <div id="product">
       <div class="image-box">
-	<!-- <img alt="{{ product.name }}" src="{{ product.image }}"> -->
+	<img alt="{{ product.name }}" src="{{ product.image.url }}">
       </div>
       <div class="info">
 	<h2>{{ product.name }}</h2>
 	<p>${{ product.price }}</p>
-	<!-- <p>{{ product.rating }}</p> -->
+	<p>{% if product.rating %}%{{ product.rating }}{% else %}<i>No Rating</i>{% endif %}</p>
 	<a class="button" href="{% url 'commerce:add' product.id %}">Add</a>
       </div>
-      <p class="text">{{ product.description|default:"No Description" }}</p>
+      <p class="text">{{ product.description|default:"<i>No Description</i>" }}</p>
     </div>
   </article>
 </main>
