Moved image-box style to commerce stylesheet

--- a/commerce/static/commerce/css/commerce.css
+++ b/commerce/static/commerce/css/commerce.css
@@ -72,4 +72,11 @@ article > h2::after {
     background: #eee;
 }
 
+.image-box > img {
+    max-width: 100%;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+}
+
 /* general classes end */
