--- a/commerce/static/commerce/css/pages/index.css
+++ b/commerce/static/commerce/css/pages/index.css
@@ -25,16 +25,9 @@
 
 .product > .image-box {
     border-bottom: 1px solid #ccc;
-    padding: 0 10px 0;
+    padding: 10px;
     border-radius: inherit;
     background: white;
-}
-
-.image-box > img {
-    max-width: 100%;
-    max-height: 200px;
-    width: auto;
-    height: auto;
 }
 
 .product > p {margin: 10px;}
