--- a/commerce/static/commerce/css/pages/index.css
+++ b/commerce/static/commerce/css/pages/index.css
@@ -1,16 +1,16 @@
 .search {margin: 20px 0;}
 
-.search > input {
+.search > input {font-size: 1em;}
+
+.search > input:focus {outline: none;}
+
+.search > input[type="text"] {
     box-sizing: border-box;
     border-radius: 5px;
+    width: 85%;
 }
 
-.search > input:focus {
-    outline: none;
-    box-shadow: 0 0 0 1px grey;
-}
-
-.search > input[type="text"] {width: 85%;}
+.search > input[type="text"]:focus {box-shadow: 0 0 0 1px grey;}
 
 .search > input[type="submit"] {width: 10%;}
 
@@ -25,7 +25,7 @@
 }
 
 .product {
-    margin: 20px 0;
+    margin-bottom: 20px;
     display: inline-block;
     box-sizing: border-box;
     width: 22%;
