Installed sites app and using auth.views.login
Installed sites for consistent site name usage
Changed commerce context processor to use new Site model
Replaced login view with auth login view
Registration form will be handled by auth
Registration view uses CreateView class
Removed both 'pages' directories
    --Moved page-specific content into commerce directories

--- a/commerce/static/commerce/css/commerce.css
+++ b/commerce/static/commerce/css/commerce.css
@@ -48,9 +48,12 @@ article > h2::after {
 .list > li:not(:last-child) {border-bottom: inherit;}
 
 .error {
+    display: inline-block;
+    margin: 0;
     background: rgba(255,0,0,0.35);
     color: #800;
-    border-color: #800;
+    border: 1px solid #800;
+    border-radius: 5px;
 }
 
 .button {
