--- a/commerce/templates/commerce/cart.html
+++ b/commerce/templates/commerce/cart.html
@@ -5,7 +5,7 @@
 {% load static %}
 {% block styles %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'commerce/css/pages/cart.css' %}">
+<link rel="stylesheet" href="{% static 'commerce/css/cart.css' %}">
 {% endblock %}
 
 {% block page_content %}
