--- a/commerce/templates/commerce/register.html
+++ b/commerce/templates/commerce/register.html
@@ -3,5 +3,36 @@
 {% block title %}Register today!{% endblock %}
 
 {% block page_content %}
-{# registration content here #}
+<div class="form">
+  <h2>Register</h2>
+  <hr>
+  {% if form.non_field_errors %}
+  <ul class="error list">
+    {% for error in form.non_field_errors %}
+    <li>{{ error }}</li>
+    {% endfor %}
+  </ul>
+  <hr>
+  {% endif %}
+  <form method="post" action="{% url 'commerce:register' %}">
+    {% csrf_token %}
+    {% for input in form %}
+    {% if input.errors %}
+    <ul class="error list">
+      {% for error in input.errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+    <div>
+      {{ input.label_tag }}
+      {{ input }}
+    </div>
+    {% endfor %}
+    <div>
+      <input type="submit" value="Log In">
+    </div>
+  </form>
+</div>
+<p>Already have an account? <a href="{% url 'commerce:login' %}">Login here!</a></p>
 {% endblock %}
