--- a/commerce/static/commerce/css/commerce.css
+++ b/commerce/static/commerce/css/commerce.css
@@ -16,14 +16,28 @@ article > h2::after {
 }
 
 /* articles end */
+/* input fields */
+
+input:focus {outline: none;}
+
+input[type="text"], input[type="password"] {
+    font-size: 1em;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+input[type="text"]:focus, input[type="password"]:focus {box-shadow: 0 0 0 1px grey;}
+
+/* input fields end */
 /* general classes */
+
+.rounded {border-radius: 5px;}
 
 .form {
     box-sizing: border-box;
     width: 400px;
     padding: 0 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
     margin: 20px auto;
 }
 
@@ -35,10 +49,7 @@ article > h2::after {
 
 .form input:not([type="submit"]) {width: 100%;}
 
-.list {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
+.list {border: 1px solid #ccc;}
 
 .list > li {
     padding: 5px;
@@ -53,15 +64,14 @@ article > h2::after {
     background: rgba(255,0,0,0.35);
     color: #800;
     border: 1px solid #800;
-    border-radius: 5px;
 }
 
 .button {
     display: inline-block;
+    font-size: 1em;
     padding: 5px 10px;
     background-color: #a00;
     border: 1px solid #ccc;
-    border-radius: 5px;
     color: white;
     transition: background-color 0.25s;
 }
@@ -71,7 +81,6 @@ article > h2::after {
 .text {
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
     background: #eee;
 }
 
