--- a/commerce/templates/commerce/cart.html
+++ b/commerce/templates/commerce/cart.html
@@ -25,20 +25,30 @@
     </tr>
     {% for item in items %}
     <tr>
-      <td><a href="{{ item.product.get_absolute_url }}">{{ item.product.name }}</a></td>
-      <td>${{ item.product.price }}</td>
-      <td><input type="number" name="update.{{ item.product.id }}" min="1" value="{{ item.quantity }}"></td>
-      <td><input type="submit" name="{{ item.product.id }}" value="Delete"></td>
+      <td>
+	<a href="{{ item.product.get_absolute_url }}">{{ item.product.name }}</a>
+      </td>
+      <td>
+	${{ item.product.price }}
+      </td>
+      <td>
+	<input type="number" name="update.{{ item.product.id }}" min="1"
+	       value="{{ item.quantity }}">
+      </td>
+      <td>
+	<input class="rounded button" type="submit" name="{{ item.product.id }}"
+	       value="Delete">
+      </td>
     </tr>
     {% endfor %}
   </table>
-  <p>Total: ${{ total }}</p>
+  <p class="rounded">Total: ${{ total }}</p>
   <div>
-    <input type="submit" value="Update">
-    <input type="submit" name="checkout" value="Checkout">
+    <input class="rounded button" type="submit" value="Update">
+    <input class="rounded button" type="submit" name="checkout" value="Checkout">
   </div>
 </form>
 {% else %}
-<p class="text">Cart is empty.</p>
+<p class="rounded text">Cart is empty.</p>
 {% endif %}
 {% endblock %}
