Added fields to admin interface for review and started template tags package
Added user and product field to admin review interface
Changed rating property in Product model to return integer
Added 'rounded' class to paragraph in index template
Started template tags package for extending template language

--- a/commerce/templates/commerce/index.html
+++ b/commerce/templates/commerce/index.html
@@ -50,6 +50,6 @@
   {% endfor %}
 </div>
 {% else %}
-<p class="text">No products found!</p>
+<p class="rounded text">No products found!</p>
 {% endif %}
 {% endblock %}
