--- a/commerce/templates/commerce/index.html
+++ b/commerce/templates/commerce/index.html
@@ -19,7 +19,7 @@
   {% endif %}
   {{ input }}
   {% endfor %}
-  <input class="rounded button" type="submit" value="Search" />
+  <input class="button" type="submit" value="Search" />
 </form>
 {% if products %}
 {% if query %}
