--- a/commerce/templates/commerce/login.html
+++ b/commerce/templates/commerce/login.html
@@ -30,7 +30,7 @@
     </div>
     {% endfor %}
     <div>
-      <input class="rounded button" type="submit" value="Login">
+      <input class="button" type="submit" value="Login">
     </div>
   </form>
 </div>
