--- a/commerce/templates/commerce/product.html
+++ b/commerce/templates/commerce/product.html
@@ -23,7 +23,10 @@
       <i>No Rating</i>
       {% endif %}
     </p>
-    <a class="rounded button" href="{{ add }}?next={{ product }}">Add</a>
+    <a class="rounded button"
+       href="{% url 'commerce:add' product.pk %}?next={{ product.get_absolute_url }}">
+      Add
+    </a>
   </div>
   <p class="rounded text">{{ product.description|default:"<i>No Description</i>" }}</p>
 </div>
