--- a/commerce/templates/commerce/register.html
+++ b/commerce/templates/commerce/register.html
@@ -30,7 +30,7 @@
     </div>
     {% endfor %}
     <div>
-      <input class="rounded button" type="submit" value="Register">
+      <input class="button" type="submit" value="Register">
     </div>
   </form>
 </div>
