Removed all action attributes from forms, etc.
Removed action attributes from forms
    --login view won't redirect without next parameter
Replaced all references to User model with AUTH_USER_MODEL setting
    --for added portability
Removed unnecessary comment from base.css

--- a/commerce/templates/commerce/cart.html
+++ b/commerce/templates/commerce/cart.html
@@ -17,7 +17,7 @@
   {% endif %}
 </h2>
 {% if items %}
-<form class="cart" method="post" action="{% url 'commerce:cart' %}">
+<form class="cart" method="post">
   {% csrf_token %}
   <table>
     <tr>
