--- a/commerce/templates/commerce/product.html
+++ b/commerce/templates/commerce/product.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{% static 'commerce/css/product.css' %}">
 {% endblock %}
 
-{% block page_content %}
+{% block content %}
 <div id="product">
   <div class="image-box">
     <img alt="{{ product.name }}" src="{{ product.image.url }}">
