--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block styles %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'commerce/css/commerce.css' %}">
+<link rel="stylesheet" href="{% static 'account/css/account.css' %}">
 {% endblock %}
 
 {% block extra %}{% endblock %}
