--- a/commerce/static/commerce/css/commerce.css
+++ b/commerce/static/commerce/css/commerce.css
@@ -1,92 +1,4 @@
-/* articles */
-
-article {
-    display: inline-block;
-    width: 69%;
-}
-
-article > h2 {position: relative;}
-
-article > h2::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(to right,rgba(0,0,0,0),rgba(0,0,0,0.5),rgba(0,0,0,0));
-}
-
-/* articles end */
-/* input fields */
-
-input:focus {outline: none;}
-
-input:not([type="submit"]) {width: 100%;}
-
-input:not([type="submit"]):focus {box-shadow: 0 0 0 1px grey;}
-
-/* inputs are already rounded */
-input {
-    font-size: 0.9em;
-    border-radius: 5px;
-}
-
-/* input fields end */
-/* general classes */
-
-.rounded {border-radius: 5px;}
-
-.form {
-    box-sizing: border-box;
-    width: 400px;
-    padding: 0 10px;
-    border: 1px solid #ccc;
-    margin: 20px auto;
-}
-
-.form div {margin: 20px 0;}
-
-.form div:not(:last-child) {text-align: left;}
-
-.form label {
-    padding: 5px 0;
-    display: block;
-}
-
-.list {border: 1px solid #ccc;}
-
-.list > li {
-    padding: 5px;
-    overflow-x: auto;
-}
-
-.list > li:not(:last-child) {border-bottom: inherit;}
-
-.error {
-    display: inline-block;
-    margin: 0;
-    background: rgba(255,0,0,0.35);
-    color: #800;
-    border: 1px solid #800;
-}
-
-.button {
-    display: inline-block;
-    padding: 5px 10px;
-    background-color: #a00;
-    border: 1px solid #a99;
-    color: white;
-    transition: background-color 0.25s;
-}
-
-.button:hover {background-color: #f00;}
-
-.text {
-    padding: 10px;
-    border: 1px solid #ccc;
-    background: #eee;
-}
+/* classes */
 
 .image-box > img {
     max-width: 100%;
@@ -95,4 +7,4 @@ input {
     height: auto;
 }
 
-/* general classes end */
+/* classes end */
