--- a/commerce/templates/commerce/cart.html
+++ b/commerce/templates/commerce/cart.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{% static 'commerce/css/cart.css' %}">
 {% endblock %}
 
-{% block page_content %}
+{% block content %}
 <h2>
   {% if user.is_authenticated %}
   {{ user.first_name }}'s Cart
