--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,11 +49,32 @@ a {
 
 p {margin: 20px 0;}
 
+article {
+    display: inline-block;
+    width: 69%;
+}
+
+article > h2 {position: relative;}
+
+article > h2::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right,rgba(0,0,0,0),rgba(0,0,0,0.5),rgba(0,0,0,0));
+}
+
 input {
     box-sizing: border-box;
     border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 0.9em;
     padding: 5px;
 }
+
+input:focus {outline: none;}
 
 h2 {
     margin: 20px 0;
@@ -66,6 +87,45 @@ table {border-collapse: collapse;}
 td, th {padding: 10px;}
 
 /* defaults end */
+/* classes */
+
+.rounded {border-radius: 5px;}
+
+.list {border: 1px solid #ccc;}
+
+.list > li {
+    padding: 5px;
+    overflow-x: auto;
+}
+
+.list > li:not(:last-child) {border-bottom: inherit;}
+
+.error {
+    display: inline-block;
+    margin: 0;
+    background: rgba(255,0,0,0.35);
+    color: #800;
+    border: 1px solid #800;
+}
+
+.button {
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: #a00;
+    border: 1px solid #a99;
+    color: white;
+    transition: background-color 0.25s;
+}
+
+.button:hover {background-color: #f00;}
+
+.text {
+    padding: 10px;
+    border: 1px solid #ccc;
+    background: #eee;
+}
+
+/* classed end */
 /* page header */
 
 header[role="banner"] {
