Moved views from account urls.py to views.py and fixed a couple of bugs
Changed 'Register' success URL to use reverse_lazy function
    --avoids circular import
Set each view to have login_required boolean that logout view will check
    --if login is required at redirect URL, go to index instead
Fixed bug where page kwarg was messing up search query in Index view

--- a/commerce/templates/commerce/index.html
+++ b/commerce/templates/commerce/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <h2>Welcome{% if user.is_authenticated %} {{ user.first_name }}{% endif %}!</h2>
-<form class="search" method="get">
+<form class="search" action="{% url 'index' %}" method="get">
   {% for input in form %}
   {% if input.errors %}
   <ul class="rounded error list">
