Added address form to account app and moved some models from commerce to account
Moved 'Address' and 'CreditCard' models from commerce to account
Created AddressForm class for adding addresses to account
Updated .gitignore to ignore any migrations/ subdirectories
Changed __str__ method of Address and CreditCard models
Made template for adding addresses
Added 'Add Address' link to account index template
Added URLs 'add_address/' and 'add_address_done/' under account app
Added add_address view for adding addresses
Changed login nav link to include next query parameter to current page

--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -3,5 +3,6 @@
 {% block content %}
 <ul class="rounded list">
   <li><a href="{% url 'account:password_change' %}">Change Password</a></li>
+  <li><a href="{% url 'account:add_address' %}">Add Address</a></li>
 </ul>
 {% endblock %}
