--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -4,5 +4,6 @@
 <ul class="rounded list">
   <li><a href="{% url 'account:password_change' %}">Change Password</a></li>
   <li><a href="{% url 'account:add_address' %}">Add Address</a></li>
+  <li><a href="{% url 'account:add_card' %}">Add Card</a></li>
 </ul>
 {% endblock %}
