--- a/account/templates/account/password_change.html
+++ b/account/templates/account/password_change.html
@@ -15,7 +15,7 @@
   </ul>
   <hr>
   {% endif %}
-  <form method="post">
+  <form method="post" action="{% url 'account:password_change' %}">
     {% csrf_token %}
     {% for input in form %}
     {% if input.errors %}
