--- a/account/templates/account/password_change.html
+++ b/account/templates/account/password_change.html
@@ -1,38 +1,15 @@
-{% extends 'account/account.html' %}
+{% extends 'account/form.html' %}
 
-{% block content %}
+{% block title %}Change Password{% endblock %}
+
+{% block top %}
 {% if success %}
 <p class="rounded text">Your password was changed successfully!</p>
 {% endif %}
-<div class="rounded form">
-  <h2>Change Password</h2>
-  <hr>
-  {% if form.non_field_errors %}
-  <ul class="rounded error list">
-    {% for error in form.non_field_errors %}
-    <li>{{ error }}</li>
-    {% endfor %}
-  </ul>
-  <hr>
-  {% endif %}
-  <form method="post" action="{% url 'account:password_change' %}">
-    {% csrf_token %}
-    {% for input in form %}
-    {% if input.errors %}
-    <ul class="error list">
-      {% for error in input.errors %}
-      <li>{{ error }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    <div>
-      {{ input.label_tag }}
-      {{ input }}
-    </div>
-    {% endfor %}
-    <div>
-      <input class="button" type="submit" value="Change Password">
-    </div>
-  </form>
-</div>
 {% endblock %}
+
+{% block heading %}Change Password{% endblock %}
+
+{% block action %}action="{% url 'account:password_change' %}"{% endblock %}
+
+{% block button %}Change{% endblock %}
