--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -1,9 +1,11 @@
 {% extends 'account/account.html' %}
 
 {% block content %}
+<h2>{{ user.first_name }}'s Account</h2>
 <ul class="rounded list">
   <li><a href="{% url 'account:password_change' %}">Change Password</a></li>
-  <li><a href="{% url 'account:add_address' %}">Add Address</a></li>
-  <li><a href="{% url 'account:add_card' %}">Add Card</a></li>
+  {% for link in links %}
+  <li><a href="{{ link.href }}">{{ link.name }}</a></li>
+  {% endfor %}
 </ul>
 {% endblock %}
