Made base list template Added order listing Added review listing Changed address listing to use base list Changed card listing to use base list Created empty order detail template Added URLs to new listings Made ListView classes for new listings Made appropriate views for links in new listings Renamed Details under commerce to ProductDetails

--- a/account/templates/account/cards.html
+++ b/account/templates/account/cards.html
@@ -1,21 +1,17 @@
-{% extends 'account/account.html' %}
+{% extends 'account/list.html' %}
 
 {% block title %}Credit Cards{% endblock %}
 
-{% block content %}
-<h2>Credit Cards</h2>
-<ul class="rounded list">
-  {% for card in cards %}
-  <li>
-    <div>{{ card }}</div>
-    <div>
-      <a href="{% url 'account:edit_card' address.pk %}">edit</a> |
-      <a href="{% url 'account:delete_card' address.pk %}">delete</a>
-    </div>
-  </li>
-  {% empty %}
-  <li>You have no cards. Click the link below to add one.</li>
-  {% endfor %}
-  <li><a href="{% url 'account:add_card' %}">Add Card</a></li>
-</ul>
+{% block heading %}Credit Cards{% endblock %}
+
+{% block item %}
+<div>{{ object }}</div>
+<div>
+  <a href="{% url 'account:edit_card' object.pk %}">edit</a> |
+  <a href="{% url 'account:delete_card' object.pk %}">delete</a>
+</div>
+{% endblock %}
+
+{% block bottom %}
+<li><a href="{% url 'account:add_card' %}">Add Card</a></li>
 {% endblock %}
